; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/huawei/hinic/extr_hinic_hw_mgmt.c_hinic_pf_to_mgmt_free.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/huawei/hinic/extr_hinic_hw_mgmt.c_hinic_pf_to_mgmt_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hinic_pf_to_mgmt = type { i32 }
%struct.hinic_pfhwdev = type { %struct.hinic_hwdev }
%struct.hinic_hwdev = type { i32 }

@HINIC_MSG_FROM_MGMT_CPU = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @hinic_pf_to_mgmt_free(%struct.hinic_pf_to_mgmt* %0) #0 {
  %2 = alloca %struct.hinic_pf_to_mgmt*, align 8
  %3 = alloca %struct.hinic_pfhwdev*, align 8
  %4 = alloca %struct.hinic_hwdev*, align 8
  store %struct.hinic_pf_to_mgmt* %0, %struct.hinic_pf_to_mgmt** %2, align 8
  %5 = load %struct.hinic_pf_to_mgmt*, %struct.hinic_pf_to_mgmt** %2, align 8
  %6 = call %struct.hinic_pfhwdev* @mgmt_to_pfhwdev(%struct.hinic_pf_to_mgmt* %5)
  store %struct.hinic_pfhwdev* %6, %struct.hinic_pfhwdev** %3, align 8
  %7 = load %struct.hinic_pfhwdev*, %struct.hinic_pfhwdev** %3, align 8
  %8 = getelementptr inbounds %struct.hinic_pfhwdev, %struct.hinic_pfhwdev* %7, i32 0, i32 0
  store %struct.hinic_hwdev* %8, %struct.hinic_hwdev** %4, align 8
  %9 = load %struct.hinic_hwdev*, %struct.hinic_hwdev** %4, align 8
  %10 = getelementptr inbounds %struct.hinic_hwdev, %struct.hinic_hwdev* %9, i32 0, i32 0
  %11 = load i32, i32* @HINIC_MSG_FROM_MGMT_CPU, align 4
  %12 = call i32 @hinic_aeq_unregister_hw_cb(i32* %10, i32 %11)
  %13 = load %struct.hinic_pf_to_mgmt*, %struct.hinic_pf_to_mgmt** %2, align 8
  %14 = getelementptr inbounds %struct.hinic_pf_to_mgmt, %struct.hinic_pf_to_mgmt* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @hinic_api_cmd_free(i32 %15)
  ret void
}

declare dso_local %struct.hinic_pfhwdev* @mgmt_to_pfhwdev(%struct.hinic_pf_to_mgmt*) #1

declare dso_local i32 @hinic_aeq_unregister_hw_cb(i32*, i32) #1

declare dso_local i32 @hinic_api_cmd_free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
